# django_library_catalog

./: db.sqlite3  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_bookinstance_borrower.py  0003_alter_bookinstance_options.py
local_library/: settings.py  urls.py
templates/: author_detail.html  author_list.html  base.html  book_detail.html  index.html  librarian_book_list_borrowed.html
