[tool.poetry]
name = "local-library"
version = "0.1.0"
description = ""
authors = ["Travis Aucoin <travisdevaucoin@gmail.com>"]
readme = "README.md"
packages = [{include = "local_library"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

